# AutoReply

./: .gitignore  build.sh  pyproject.toml  rxconfig.py
AutoReply/: AutoReply.py
AutoReply/components/: header_text.py  navbar.py
AutoReply/pages/: index.py
AutoReply/styles/: background.py  colors.py  font.py  style.py
AutoReply/views/: header.py
assets/: animated_background.css
