[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoReply"
version = "0.1.0"
description = "Automate customer service easily"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Walkercito", email = "example@example.com"}
]
dependencies = [
    "reflex>=0.3.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
]

[tool.setuptools]
packages = ["AutoReply"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
